// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlledSearchableDropdown component > should display default value 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-controls="test-static-id"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="mocked-styled-8 el-searchable-dropdown-container"
        role="combobox"
      >
        <input
          id="some-id"
          readonly=""
          style="display: none;"
          value="4"
        />
        <span
          class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
        >
          <span
            class="el-intent-default el-icon"
          />
        </span>
        <input
          aria-label="Input type undefined"
          class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
          data-testid="search-input"
          value="Forth"
        />
        <span
          class="mocked-styled-12 el-searchable-dropdown-close-button el-icon"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-controls="test-static-id"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="mocked-styled-8 el-searchable-dropdown-container"
      role="combobox"
    >
      <input
        id="some-id"
        readonly=""
        style="display: none;"
        value="4"
      />
      <span
        class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
      >
        <span
          class="el-intent-default el-icon"
        />
      </span>
      <input
        aria-label="Input type undefined"
        class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
        data-testid="search-input"
        value="Forth"
      />
      <span
        class="mocked-styled-12 el-searchable-dropdown-close-button el-icon"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ControlledSearchableDropdown component > should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-controls="test-static-id"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="mocked-styled-8 el-searchable-dropdown-container"
        role="combobox"
      >
        <input
          id="some-id"
          readonly=""
          style="display: none;"
          value=""
        />
        <span
          class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
        >
          <span
            class="el-intent-default el-icon"
          />
        </span>
        <input
          aria-label="Input type undefined"
          class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
          data-testid="search-input"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-controls="test-static-id"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="mocked-styled-8 el-searchable-dropdown-container"
      role="combobox"
    >
      <input
        id="some-id"
        readonly=""
        style="display: none;"
        value=""
      />
      <span
        class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
      >
        <span
          class="el-intent-default el-icon"
        />
      </span>
      <input
        aria-label="Input type undefined"
        class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
        data-testid="search-input"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchableDropdown component > should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-controls="test-static-id"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="mocked-styled-8 el-searchable-dropdown-container"
        role="combobox"
      >
        <input
          id="some-id"
          readonly=""
          style="display: none;"
          value=""
        />
        <span
          class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
        >
          <span
            class="el-intent-default el-icon"
          />
        </span>
        <input
          aria-label="Input type undefined"
          class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
          data-testid="search-input"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-controls="test-static-id"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="mocked-styled-8 el-searchable-dropdown-container"
      role="combobox"
    >
      <input
        id="some-id"
        readonly=""
        style="display: none;"
        value=""
      />
      <span
        class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
      >
        <span
          class="el-intent-default el-icon"
        />
      </span>
      <input
        aria-label="Input type undefined"
        class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
        data-testid="search-input"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchableDropdownSearchLabel component > should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="mocked-styled-14 el-searchable-dropdown-search-label el-label"
      >
        I am a label
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="mocked-styled-14 el-searchable-dropdown-search-label el-label"
    >
      I am a label
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
